--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "motion": "^10.18.0",
     "reading-time": "^1.5.0",
     "solid-js": "^1.8.17",
-    "svelte": "^4.2.17"
+    "svelte": "^4.2.17",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/d3": "^7.4.3",
